compiler/tests/ar/errors/pure_global_write.salam
// لغة: العربية
// توقع: E013
متغير مجموع := 0

نقي دالة زد(قیمة: صحیح): صحیح:
    مجموع = مجموع + قیمة
    أرجع مجموع
نهاية

دالة الرئیسیة:
    اطبع زد(2)
نهاية
